# air-contamination

./: .dockerignore  .gitignore  PANELES.md  README.md  app.py  logs-davislcvb-air-contamination-main-app.py-2026-07-15T03_21_29.815Z.txt  pyproject.toml  render.yaml  requirements.txt  verificar_rol_b.py  verificar_rol_c.py
.streamlit/: config.toml
data/: consultas.db
docs/: PANELES.md  reporte.tex
models/: forecast_metrics.json  metrics.json  xgb.pkl
notebooks/: 01_eda.ipynb  02_modeling.ipynb  03_forecasting.ipynb
src/: forecast.py  models.py  panel_crud.py  panel_eda.py  panel_forecast.py  panel_predictivo.py  panel_recomendaciones.py  preprocessing.py  theme.py
src/application/: graficos.py  panel_crud.py  panel_eda.py  panel_forecast.py  panel_predictivo.py  panel_recomendaciones.py  theme.py
src/core/: clustering.py  consultas.py  forecast.py  models.py  preprocessing.py  recomendaciones.py
