[project]
name = "air-contamination"
version = "0.1.0"
description = "Análisis predictivo de los contaminantes del aire de Lima metropolitana"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=7.3.0",
  "jupyter>=1.1.1",
  "numpy>=2.5.1",
  "pandas>=3.0.3",
  "pandas-stubs>=3.0.3.260530",
  "pyarrow>=25.0.0",
  "quarto>=0.1.0",
]
